# add_executable(BSTTest BSTTest.cpp)
# target_link_libraries(MyTest ${GTEST_BOTH_LIBRARIES})
# gtest_add_tests(TARGET MyTest)


add_executable(ListTest ListTest.cpp)
add_executable(GraphTest GraphTest.cpp)
add_executable(DiGraphTest DiGraphTest.cpp)
add_executable(EdgeWeightedGraphTest EdgeWeightedGraphTest.cpp)
